# zbx-1c-py

./: .env.example  .env.rac.example  .env.techlog.example  .gitignore  LICENSE  README.md  cspell.config.yaml  manager.py  package-lock.json  pyproject.toml  pyrightconfig.json  run_direct.py  send_cluster_status.py  test_discovery.py  test_metrics.py  zbx_1c_metrics.py
.cspell/: custom-dictionary-workspace.txt  custom-dictionary.txt
.qwen/: settings.json
config/: logcfg.xml
docs/: 01-packages.md  01-quickstart.md  02-deployment.md  03-migration.md  03-zbx-1c-publisher.md  04-logcfg-setup.md  04-zabbix-integration.md  05-crossplatform.md  05-zbx-1c-rac-crossplatform.md  06-architecture.md  07-techlog-reference.md  CROSSPLATFORM.md  README.md  api.md  architecture.md  cluster_status.md  configuration.md  contributing.md  faq.md  index.md  installation.md  logcfg-setup.md  security.md  testing.md  zabbix-integration.md  Техжурнал 1С — синтаксис фильтров.md
scripts/: README.md  check_config.py  generate_userparam_config.py  start-techlog-api.bat  start-techlog-service.bat
scripts/ci/: build.ps1  build.sh  test.ps1  test.sh
shared/: __init__.py
shared/core/: config.py  logging.py
shared/zabbix/: __init__.py  sender.py
src/project_name/: main.py
src/zbx_1c/: __init__.py  __main__.py
src/zbx_1c/api/: __init__.py  dependencies.py  main.py  routes.py
src/zbx_1c/cli/: __init__.py  cleanup_logs.py  commands.py  deploy_logcfg.py  generate_userparam.py  techjournal.py  zabbix_config.py
src/zbx_1c/cli/techlog/: __init__.py  read_errors.py  read_locks.py  read_slow_calls.py  read_slow_sql.py
src/zbx_1c/core/: __init__.py  config.py  exceptions.py  logging.py  models.py
src/zbx_1c/monitoring/: __init__.py
src/zbx_1c/monitoring/cluster/: __init__.py  discovery.py  manager.py
src/zbx_1c/monitoring/infobase/: __init__.py  analyzer.py  finder.py  monitor.py
src/zbx_1c/monitoring/jobs/: __init__.py  reader.py
src/zbx_1c/monitoring/license/: __init__.py  manager.py
src/zbx_1c/monitoring/session/: __init__.py  collector.py  filters.py
src/zbx_1c/monitoring/techjournal/: __init__.py  collector.py  parser.py  sender.py
src/zbx_1c/techlog/: __init__.py  reader.py
src/zbx_1c/utils/: __init__.py  converters.py  fs.py  license_detector.py  license_parser.py  net.py  process_memory.py  rac_client.py  validators.py
src/zbx_1c_py/: __init__.py  background_jobs.py  clusters.py  config.py  main.py  session.py  session_active.py
src/zbx_1c_py/utils/: __init__.py  check_config.py  helpers.py
tests/: conftest.py  final_test.py  final_verification.py  test_all_sessions.py  test_all_sessions_fixed.py  test_background_jobs.py  test_basic.py  test_check_config_script.py  test_check_config_uv_run.py  test_cluster_sessions.py  test_clusters.py  test_config.py  test_config_check.py  test_config_check_extended.py  test_credentials.py  test_cross_platform.py  test_detailed_status.py  test_direct_command.py  test_discovery_live.py  test_helpers.py  test_infobase_modules.py  test_infobase_with_session.py  test_integration.py  test_ka_pin_test8.py  test_paths.py  test_session.py  test_session_active.py  test_session_cmd.py  test_session_functions.py
tests/monitoring/: test_techjournal.py
zabbix/: zabbix_agentd.conf.example
zabbix/templates/: template_1c_rac.yaml  templates.yaml
zabbix/userparameters/: userparameter_1c.conf  userparameter_1c_rac.conf  userparameter_rac.conf  userparameter_techjournal.conf
