[project]
name = "zbx_1c_py"
version = "0.1.0"
description = "Мониторинг 1С Zabbix"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.6.0",
    "psutil>=5.9.0",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
check-config = "scripts.check_config:check_configuration"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pip-audit>=2.7.0",
    "black>=24.0.0",
    "pylint>=3.0.0",
    "pylint-pydantic>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zbx_1c_py"] # Имя должно совпадать с папкой в src

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function docstring
    "R0903", # Too few public methods
    "W0612", # Unused variable
    "W0221",
    "E0401", # Unable to import (это уберет ошибку с config)
    "C0103", # Invalid constant name (если переменные не CAPS_LOCK)
]

[tool.pylint.MASTER]
# Указываем линтеру, что корень кода — это папка src
init-hook = "import sys; sys.path.append('src')"
load-plugins = ["pylint_pydantic"]
