[project]
name = "zbx_1c"
version = "0.1.0"
description = "Кроссплатформенный инструмент для интеграции 1С:Предприятия с системой мониторинга Zabbix"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Author", email = "author@example.com" }]
keywords = ["zabbix", "monitoring", "1c", "integration", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.12.0",
    "psutil>=5.9.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.7.0",
    "black>=24.0.0",
    "pylint>=3.0.0",
    "pylint-pydantic>=0.4.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.7.0",
    "black>=24.0.0",
    "pylint>=3.0.0",
    "pylint-pydantic>=0.4.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
zbx-1c = "zbx_1c.cli.commands:cli"
zbx-1c-discovery = "zbx_1c.cli.commands:discovery"
zbx-1c-check-ras = "zbx_1c.cli.commands:check_ras_cmd"
zbx-1c-monitor = "zbx_1c.cli.commands:monitor"
zbx-1c-metrics = "zbx_1c.cli.commands:get_metrics"
zbx-1c-status = "zbx_1c.cli.commands:get_cluster_status"
zbx-1c-infobases = "zbx_1c.cli.commands:get_infobases_cmd"
zbx-1c-sessions = "zbx_1c.cli.commands:get_sessions_cmd"
zbx-1c-jobs = "zbx_1c.cli.commands:get_jobs_cmd"
zbx-1c-test = "zbx_1c.cli.commands:test_connection"
[project.urls]
Homepage = "https://github.com/your-repo/zbx-1c"
Repository = "https://github.com/your-repo/zbx-1c"
Documentation = "https://github.com/your-repo/zbx-1c/blob/main/docs/index.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zbx_1c"]

[tool.hatch.version]
path = "src/zbx_1c/__init__.py"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/conftest.py", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["src/**/*.py", "tests/**/*.py"]

[[tool.mypy.overrides]]
module = ["loguru", "pydantic.*"]
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function docstring
    "R0903", # Too few public methods
    "W0612", # Unused variable
    "W0221",
    "E0401", # Unable to import (это уберет ошибку с config)
    "C0103", # Invalid constant name (если переменные не CAPS_LOCK)
]

[tool.pylint.MASTER]
# Указываем линтеру, что корень кода — это папка src
init-hook = "import sys; sys.path.append('src')"
load-plugins = ["pylint_pydantic"]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
